@@ -27,7 +27,10 @@
  * \file 
  * Contains the code for the emulated Typhoon Chipset devices.
  *
- * $Id: System.cpp,v 1.66 2008/03/02 09:42:52 iamcamiel Exp $
+ * $Id: System.cpp,v 1.67 2008/03/02 09:48:33 iamcamiel Exp $
+ *
+ * X-1.66       Brian Wheeler                                   02-MAR-2008
+ *      Allow large memory sizes (>1GB).
  *
  * X-1.65       Camiel Vanderhoeven                             02-MAR-2008
  *      Natural way to specify large numeric values ("10M") in the config file.
@@ -336,9 +339,17 @@ CSystem::CSystem(CConfigurator * cfg)
   state.tig.HaltA   = 0;
   state.tig.HaltB   = 0;
 
-  CHECK_ALLOCATION(memory = calloc(1<<iNumMemoryBits,1));
+  if(iNumMemoryBits > 30)
+  {
+    // size_t may not be big enough, and makes 2^31 negative, so the
+    // alloc fails.  We're going to allocate the memory in 
+    //  2^(iNumMemoryBits-10) chunks of 2^10.
+    CHECK_ALLOCATION(memory = calloc(1<<(iNumMemoryBits-10),1<<10));
+  }
+  else
+    CHECK_ALLOCATION(memory = calloc(1<<iNumMemoryBits,1));
 
-  printf("%s(%s): $Id: System.cpp,v 1.66 2008/03/02 09:42:52 iamcamiel Exp $\n",cfg->get_myName(),cfg->get_myValue());
+  printf("%s(%s): $Id: System.cpp,v 1.67 2008/03/02 09:48:33 iamcamiel Exp $\n",cfg->get_myName(),cfg->get_myValue());
 }
 
 /**
